--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':library')
-
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile project(':pickdatetime')
 }
